--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
+    "@types/node": "^20.2.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
